fix: copy jsontree.py module for qwen3-omni support
The qwen3-omni branch requires the jsontree module which wasn't being
copied during the integration stage, causing ModuleNotFoundError on
startup.

--- a/docker/vllm-rocm/Dockerfile
+++ b/docker/vllm-rocm/Dockerfile
@@ -106,7 +106,8 @@ RUN cd qwen3-vllm && \
 
 RUN cd qwen3-vllm && \
     cp -r vllm/attention/* /build/vllm/vllm/attention/ 2>/dev/null || true && \
-    cp -r vllm/multimodal/* /build/vllm/vllm/multimodal/ 2>/dev/null || true
+    cp -r vllm/multimodal/* /build/vllm/vllm/multimodal/ 2>/dev/null || true && \
+    cp -r vllm/jsontree.py /build/vllm/vllm/ 2>/dev/null || true
 
 FROM qwen3-omni-integration AS final
 
