Convert vLLM build to AMD Strix Halo gfx1151 architecture
Use kyuz0/pytorch-therock-gfx1151-aotriton-builder as base image with pre-configured PyTorch, Triton, and ROCm dependencies for gfx1151. Replace Ubuntu-based build with Arch Linux runtime matching upstream toolbox pattern. Apply vLLM patches for gfx1151 support, amdsmi workarounds, and build system compatibility. Remove workflow input parameters since versions now come from builder image.

--- a/docker/vllm-rocm/Dockerfile
+++ b/docker/vllm-rocm/Dockerfile
@@ -1,134 +1,126 @@
-ARG ROCM_VERSION=6.4.4
-ARG PYTHON_VERSION=3.10
-ARG VLLM_VERSION=main
-ARG FLASH_ATTENTION_BRANCH=main_perf
+FROM kyuz0/pytorch-therock-gfx1151-aotriton-builder:latest AS vllm-builder
 
-FROM rocm/dev-ubuntu-22.04:${ROCM_VERSION}-complete AS rocm-base
+RUN git clone --depth 1 https://github.com/vllm-project/vllm.git
 
-ARG PYTHON_VERSION
-ARG DEBIAN_FRONTEND=noninteractive
+RUN source .venv/bin/activate && \
+    cd vllm && \
+    uv pip install ninja cmake wheel pybind11 && \
+    uv pip install --upgrade numba scipy huggingface-hub[cli] "numpy<2" && \
+    python use_existing_torch.py && \
+    sed -i '/amdsmi==/d' requirements/rocm-build.txt && \
+    sed -i '/pytorch-triton-rocm/d' requirements/rocm-build.txt && \
+    sed -i '/triton==/d' requirements/rocm-build.txt && \
+    uv pip install -r requirements/rocm-build.txt
 
-ENV ROCM_VERSION=6.4.4
-ENV ROCM_HOME=/opt/rocm
-ENV PATH="${ROCM_HOME}/bin:${PATH}"
-ENV LD_LIBRARY_PATH="${ROCM_HOME}/lib:${LD_LIBRARY_PATH}"
+RUN cd vllm && \
+    sed -i 's/gfx1200;gfx1201/gfx1151;gfx1200;gfx1201/' CMakeLists.txt && \
+    sed -i '/torch == 2.8.0,/d' pyproject.toml && \
+    sed -i 's/import torch/try:\n    import torch\n    from torch.utils.cpp_extension import CUDA_HOME, ROCM_HOME\n    TORCH_AVAILABLE = True\nexcept ImportError:\n    torch = None\n    CUDA_HOME = None\n    ROCM_HOME = None\n    TORCH_AVAILABLE = False/' setup.py && \
+    sed -i 's/from torch.utils.cpp_extension import CUDA_HOME, ROCM_HOME/# Moved to try block above/' setup.py && \
+    sed -i 's/torch.version.cuda is None/TORCH_AVAILABLE and torch.version.cuda is None/' setup.py && \
+    sed -i 's/has_cuda = torch.version.cuda is not None/has_cuda = TORCH_AVAILABLE and torch.version.cuda is not None/' setup.py && \
+    sed -i 's/torch.version.hip is not None/TORCH_AVAILABLE and torch.version.hip is not None/' setup.py && \
+    sed -i 's/rocm_version = get_rocm_version() or torch.version.hip/rocm_version = get_rocm_version() or (torch.version.hip if TORCH_AVAILABLE else None)/' setup.py && \
+    sed -i 's/cuda_major, cuda_minor = torch.version.cuda.split(".")/cuda_major, cuda_minor = torch.version.cuda.split(".") if TORCH_AVAILABLE else ("0", "0")/' setup.py
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    python${PYTHON_VERSION} \
-    python${PYTHON_VERSION}-dev \
-    python3-pip \
-    git \
-    wget \
-    curl \
-    ca-certificates \
-    build-essential \
-    ninja-build \
-    cmake \
-    rocm-dev \
-    hipblas \
-    hipfft \
-    rocblas \
-    rocsparse \
-    hipsparse \
-    rocthrust \
-    rocprim \
-    hipcub \
-    rocrand \
-    rccl \
-    rocfft \
-    rocsolver \
-    hipblaslt \
-    ffmpeg \
-    libsndfile1 \
-    libsndfile1-dev \
-    && rm -rf /var/lib/apt/lists/*
+RUN cd vllm && \
+    git checkout HEAD -- vllm/platforms/__init__.py && \
+    sed -i '/def rocm_platform_plugin/,/return "vllm.platforms.rocm.RocmPlatform" if is_rocm else None/s/is_rocm = False/is_rocm = False/' vllm/platforms/__init__.py && \
+    sed -i '/def rocm_platform_plugin/,/return "vllm.platforms.rocm.RocmPlatform" if is_rocm else None/s/logger.debug("Checking if ROCm platform is available.")/logger.debug("Checking if ROCm platform is available.")\n    \n    # Skip amdsmi check due to segfault issues - default to ROCm for AMD systems/' vllm/platforms/__init__.py && \
+    sed -i '/def rocm_platform_plugin/,/return "vllm.platforms.rocm.RocmPlatform" if is_rocm else None/s/try:\n        import amdsmi/try:\n        import torch/' vllm/platforms/__init__.py && \
+    sed -i '/def rocm_platform_plugin/,/return "vllm.platforms.rocm.RocmPlatform" if is_rocm else None/s/amdsmi.amdsmi_init()/# amdsmi disabled - using torch detection/' vllm/platforms/__init__.py && \
+    sed -i '/def rocm_platform_plugin/,/return "vllm.platforms.rocm.RocmPlatform" if is_rocm else None/s/try:\n            if len(amdsmi.amdsmi_get_processor_handles()) > 0:/if hasattr(torch, '\''version'\'') and hasattr(torch.version, '\''hip'\'') and torch.version.hip is not None:/' vllm/platforms/__init__.py && \
+    sed -i '/def rocm_platform_plugin/,/return "vllm.platforms.rocm.RocmPlatform" if is_rocm else None/s/is_rocm = True\n                logger.debug("Confirmed ROCm platform is available.")/is_rocm = True\n            logger.debug("ROCm platform detected via torch.version.hip")/' vllm/platforms/__init__.py && \
+    sed -i '/def rocm_platform_plugin/,/return "vllm.platforms.rocm.RocmPlatform" if is_rocm else None/s/else:\n                logger.debug("ROCm platform is not available because"\n                             " no GPU is found.")/else:\n            # Fallback: assume ROCm if we'\''re not CUDA and not other platforms\n            logger.debug("Defaulting to ROCm platform (amdsmi disabled due to segfault)")\n            is_rocm = True/' vllm/platforms/__init__.py && \
+    sed -i '/def rocm_platform_plugin/,/return "vllm.platforms.rocm.RocmPlatform" if is_rocm else None/s/finally:\n            amdsmi.amdsmi_shut_down()/finally:\n            # amdsmi disabled\n            pass/' vllm/platforms/__init__.py && \
+    sed -i '/def rocm_platform_plugin/,/return "vllm.platforms.rocm.RocmPlatform" if is_rocm else None/s/logger.debug("ROCm platform is not available because: %s", str(e))/logger.debug("ROCm platform check failed: %s", str(e))\n        # Still default to ROCm as fallback\n        is_rocm = True/' vllm/platforms/__init__.py
 
-RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python${PYTHON_VERSION} 1 && \
-    update-alternatives --install /usr/bin/python python /usr/bin/python${PYTHON_VERSION} 1 && \
-    python3 -m pip install --upgrade pip setuptools wheel && \
-    pip3 install --upgrade cmake
+RUN cd vllm && python - <<'PY'
+from pathlib import Path
+p = Path("vllm/platforms/rocm.py")
+s = p.read_text()
 
-RUN pip3 install --no-cache-dir \
-    torch==2.9.0+rocm6.4 \
-    torchvision \
-    torchaudio \
-    --index-url https://download.pytorch.org/whl/rocm6.4
+if "def amdsmi_init" not in s:
+    s += """
 
-FROM rocm-base AS flash-attention-builder
+try:
+    amdsmi
+except Exception:
+    amdsmi = None
 
-ARG FLASH_ATTENTION_BRANCH
+if 'amdsmi_init' not in globals():
+    def amdsmi_init(): return None
+    def amdsmi_shut_down(): return None
+"""
 
-ENV PYTORCH_ROCM_ARCH="gfx1100"
-ENV HSA_OVERRIDE_GFX_VERSION=11.0.0
-ENV TORCH_ROCM_AOTRITON_ENABLE_EXPERIMENTAL=1
-ENV ROCBLAS_USE_HIPBLASLT=1
-ENV HIPBLASLT_TENSILE_LIBPATH=/opt/rocm/lib/hipblaslt/library
-ENV FLASH_ATTENTION_TRITON_AMD_ENABLE=TRUE
-ENV FLASH_ATTENTION_TRITON_AMD_AUTOTUNE=TRUE
+if "vllm_therock_rocm_get_device_name" not in s:
+    s += r"""
 
-WORKDIR /build
+def vllm_therock_rocm_get_device_name(self, device_id: int = 0):
+    try:
+        import torch
+        return torch.cuda.get_device_name(device_id)
+    except Exception:
+        return "AMD-gfx1151"
 
-RUN pip3 install --no-cache-dir triton==3.2.0 packaging
+try:
+    RocmPlatform.get_device_name = vllm_therock_rocm_get_device_name
+except Exception:
+    pass
+"""
+p.write_text(s)
+print("Patched", p)
+PY
 
-RUN git clone https://github.com/ROCm/flash-attention.git && \
-    cd flash-attention && \
-    git checkout ${FLASH_ATTENTION_BRANCH} && \
-    MAX_JOBS=8 python3 setup.py install
 
-FROM flash-attention-builder AS vllm-builder
+RUN source .venv/bin/activate && \
+    cd vllm && \
+    uv pip uninstall amdsmi || echo "amdsmi not installed" && \
+    printf '#!/bin/bash\necho "gfx1151"\n' > /usr/local/bin/amdgpu-arch && \
+    chmod +x /usr/local/bin/amdgpu-arch && \
+    printf '#!/bin/bash\necho "gfx1151"\n' > /usr/bin/amdgpu-arch && \
+    chmod +x /usr/bin/amdgpu-arch && \
+    printf '#!/bin/bash\necho "gfx1151"\n' > /bin/amdgpu-arch && \
+    chmod +x /bin/amdgpu-arch && \
+    export PYTORCH_ROCM_ARCH="gfx1151" && \
+    /torch-therock/.venv/bin/python -c "import torch; print('torch==' + torch.__version__)" > /tmp/constraints.txt && \
+    /torch-therock/.venv/bin/python -c "import triton; print('pytorch-triton-rocm==' + getattr(triton, '__version__', 'unknown'))" >> /tmp/constraints.txt || echo "# triton version not found" >> /tmp/constraints.txt && \
+    TORCH_CMAKE_PATH=$(/torch-therock/.venv/bin/python -c "import torch; print(torch.utils.cmake_prefix_path)") && \
+    VLLM_TARGET_DEVICE=rocm CMAKE_PREFIX_PATH="$TORCH_CMAKE_PATH" Torch_DIR="$TORCH_CMAKE_PATH/Torch" CMAKE_ARGS="-DGPU_TARGETS=gfx1151 -DHIP_TARGETS=gfx1151 -DAMDGPU_TARGETS=gfx1151" /torch-therock/.venv/bin/pip install . --no-build-isolation --constraint /tmp/constraints.txt
 
-ENV VLLM_TARGET_DEVICE=rocm
-ENV VLLM_USE_V1=1
-ENV VLLM_ATTENTION_BACKEND=ROCM_TRITON
+FROM archlinux:latest
 
-WORKDIR /build
+RUN pacman -Syu --noconfirm && \
+    pacman -S --noconfirm ca-certificates gcc make cmake ninja git && \
+    pacman -Scc --noconfirm && \
+    git clone --depth 1 https://github.com/pyenv/pyenv.git /opt/pyenv && \
+    export PYENV_ROOT=/opt/pyenv && \
+    export PATH=$PYENV_ROOT/bin:$PATH && \
+    eval "$(pyenv init -)" && \
+    pyenv install 3.12.9 && \
+    pyenv global 3.12.9
 
-RUN git clone https://github.com/vllm-project/vllm.git vllm
+COPY --from=vllm-builder /opt/pyenv /opt/pyenv
+COPY --from=vllm-builder /torch-therock/.venv /torch-therock/.venv
+COPY --from=vllm-builder /torch-therock/*.sh /torch-therock/
 
-WORKDIR /build/vllm
+ENV PYENV_ROOT=/opt/pyenv
+ENV PYENV_VERSION=3.12.9
+ENV PATH="/opt/pyenv/versions/3.12.9/bin:/torch-therock/.venv/bin:$PATH"
+ENV PYTORCH_ROCM_ARCH=gfx1151
 
-RUN pip3 install --no-cache-dir -r requirements/rocm.txt && \
-    pip3 install --no-cache-dir -e . --no-build-isolation
+WORKDIR /torch-therock
 
-FROM vllm-builder AS final
+RUN /torch-therock/.venv/bin/python -c "import torch; print('PyTorch version:', torch.__version__)" && \
+    /torch-therock/.venv/bin/python -c "import vllm; print('vLLM version:', vllm.__version__)"
 
-ENV HF_HOME=/models
-ENV TRANSFORMERS_CACHE=/models
-ENV HUGGINGFACE_HUB_CACHE=/models
-ENV PYTORCH_ROCM_ARCH="gfx1100"
-ENV HSA_OVERRIDE_GFX_VERSION=11.0.0
-ENV TORCH_ROCM_AOTRITON_ENABLE_EXPERIMENTAL=1
-ENV ROCBLAS_USE_HIPBLASLT=1
-ENV HIPBLASLT_TENSILE_LIBPATH=/opt/rocm/lib/hipblaslt/library
-ENV FLASH_ATTENTION_TRITON_AMD_ENABLE=TRUE
-ENV FLASH_ATTENTION_TRITON_AMD_AUTOTUNE=TRUE
-ENV VLLM_USE_V1=1
-ENV VLLM_ATTENTION_BACKEND=ROCM_TRITON
+RUN chmod -R a+rwX /torch-therock
 
-RUN pip3 install --no-cache-dir \
-    librosa==0.10.1 \
-    soundfile==0.12.1 \
-    av==12.0.0 \
-    transformers>=4.45.0 \
-    accelerate \
-    gradio==5.44.1 \
-    huggingface-hub
+COPY scripts/vllm-env.sh /etc/profile.d/vllm-env.sh
+COPY scripts/vllm-banner.sh /etc/profile.d/vllm-banner.sh
+RUN chmod 644 /etc/profile.d/vllm-env.sh /etc/profile.d/vllm-banner.sh
 
-RUN mkdir -p /app /models && \
-    groupadd -g 2000 vllm && \
-    useradd -u 2000 -g 2000 -d /app -s /bin/bash vllm && \
-    chown -R 2000:2000 /app /models
+COPY scripts/start-vllm.sh /usr/local/bin/start-vllm
+RUN chmod 755 /usr/local/bin/start-vllm
 
-WORKDIR /app
-
-COPY --chown=2000:2000 entrypoint.sh /app/
-COPY --chown=2000:2000 scripts/ /app/scripts/
-
-RUN chmod +x /app/entrypoint.sh /app/scripts/*.sh
-
-EXPOSE 8901
-
-USER 2000
-
-ENTRYPOINT ["/app/entrypoint.sh"]
-CMD ["--help"]
+CMD ["bash", "-c", "source .venv/bin/activate && bash"]
