--- a/.gitea/workflows/build-vllm-rocm.yml
+++ b/.gitea/workflows/build-vllm-rocm.yml
@@ -2,19 +2,6 @@ name: Build vLLM ROCm gfx1151
 
 on:
   workflow_dispatch:
-    inputs:
-      rocm_version:
-        description: "ROCm version"
-        required: true
-        default: "6.4.4"
-      vllm_version:
-        description: "vLLM branch/tag"
-        required: true
-        default: "main"
-      flash_attention_branch:
-        description: "Flash Attention branch"
-        required: true
-        default: "main_perf"
 
 jobs:
   build:
@@ -41,12 +28,8 @@ jobs:
           file: ./docker/vllm-rocm/Dockerfile
           platforms: linux/amd64
           push: true
-          build-args: |
-            ROCM_VERSION=${{ inputs.rocm_version }}
-            VLLM_VERSION=${{ inputs.vllm_version }}
-            FLASH_ATTENTION_BRANCH=${{ inputs.flash_attention_branch }}
           tags: |
             cr.holdenitdown.net/${{ gitea.repository_owner }}/vllm:gfx1151
-            cr.holdenitdown.net/${{ gitea.repository_owner }}/vllm:gfx1151-rocm${{ inputs.rocm_version }}
+            cr.holdenitdown.net/${{ gitea.repository_owner }}/vllm:gfx1151-latest
           cache-from: type=registry,ref=cr.holdenitdown.net/${{ gitea.repository_owner }}/vllm:buildcache-gfx1151
           cache-to: type=registry,ref=cr.holdenitdown.net/${{ gitea.repository_owner }}/vllm:buildcache-gfx1151,mode=max
