Simplify vLLM ROCm build by trusting proper ROCm installation
Remove manual workarounds and let build system auto-detect GPU architecture:
- Download and extract ROCm tarball from therock-nightly-tarball
- Validate ROCm installation with amd-smi before building
- Remove stub amdgpu-arch script
- Remove manual CMAKE_ARGS with torch cmake path detection
- Remove manual AMDGPU_TARGETS and GPU_ARCHS environment variables
- Simplify flash-attention build (no manual CMAKE_ARGS)
- Remove custom entrypoint/CMD

This approach relies on a complete ROCm installation validated by amd-smi
to provide proper GPU detection during the build process.

--- a/docker/vllm-rocm/Dockerfile
+++ b/docker/vllm-rocm/Dockerfile
@@ -5,7 +5,6 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 ARG ROCM_INDEX_URL=https://rocm.nightlies.amd.com/v2/gfx1151/
 
 WORKDIR /opt/vllm-build
-
 RUN uv venv --python 3.13
 ENV VIRTUAL_ENV=/opt/vllm-build/.venv
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
@@ -26,7 +25,6 @@ RUN dnf install -y \
     tar \
     gzip \
     libatomic \
-    patch \
     && dnf clean all
 
 RUN --mount=type=cache,target=/root/.cache/uv \
@@ -36,6 +34,9 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 RUN --mount=type=cache,target=/var/cache/rocm-downloads \
     ROCM_VERSION=$(uv pip show torch | grep Version | awk -F'+rocm' '{print $2}') && \
     echo "Detected ROCm Version: $ROCM_VERSION" && \
+    #
+    # Fetch the ROCm tarball from cache or download
+    #
     TARBALL="therock-dist-linux-gfx1151-${ROCM_VERSION}.tar.gz" && \
     if [ -f "/var/cache/rocm-downloads/${TARBALL}" ]; then \
         echo "Using cached ROCm tarball" && \
@@ -45,28 +46,31 @@ RUN --mount=type=cache,target=/var/cache/rocm-downloads \
         curl -#LO "https://therock-nightly-tarball.s3.amazonaws.com/${TARBALL}" && \
         cp "${TARBALL}" "/var/cache/rocm-downloads/${TARBALL}" ; \
     fi && \
+    #
+    # Extract tarball
+    #
     echo "Extracting ROCm from ${TARBALL}" && \
     mkdir -p rocm-${ROCM_VERSION} && \
     tar xzf ${TARBALL} -C rocm-${ROCM_VERSION} && \
     rm ${TARBALL} && \
+    #
+    # Link ROCm version
+    #
     echo "${ROCM_VERSION}" > /opt/rocm_version.txt && \
     ln -s /opt/vllm-build/rocm-${ROCM_VERSION} /opt/rocm-current
+
 
 ENV ROCM_PATH=/opt/rocm-current
 ENV LD_LIBRARY_PATH=$ROCM_PATH/lib
 ENV DEVICE_LIB_PATH=$ROCM_PATH/llvm/amdgcn/bitcode
 ENV HIP_DEVICE_LIB_PATH=$ROCM_PATH/llvm/amdgcn/bitcode
 ENV PYTORCH_ROCM_ARCH="gfx1151"
-ENV AMDGPU_TARGETS="gfx1151"
-ENV GPU_ARCHS="gfx1151"
 ENV CUDA_HOME=/opt/rocm-current
-ENV VLLM_TARGET_DEVICE=rocm
-ENV FLASH_ATTENTION_TRITON_AMD_ENABLE="TRUE"
-ENV HIP_VISIBLE_DEVICES=-1
-ENV ROCR_VISIBLE_DEVICES=-1
+ENV VLLM_TORCH_COMPILE_LEVEL=0
 
-RUN echo '#!/bin/bash\necho gfx1151\nexit 0' > /usr/local/bin/amdgpu-arch && \
-    chmod +x /usr/local/bin/amdgpu-arch
+RUN AMD_SMI_VALIDATION=$($ROCM_PATH/bin/amd-smi) && \
+    echo "AMD SMI Validation Output:" && \
+    echo "$AMD_SMI_VALIDATION"
 
 RUN --mount=type=cache,target=/root/.cache/git \
     echo "Cloning vllm repository..." && \
@@ -78,9 +82,12 @@ RUN sed -i '/from \.version import __version__/a import amdsmi' vllm/__init__.py
 
 RUN --mount=type=cache,target=/root/.cache/uv \
     echo "Building vllm..." && \
-    TORCH_CMAKE_PATH=$(python -c "import torch; print(torch.utils.cmake_prefix_path)" 2>&1 | tail -1) && \
-    export CMAKE_ARGS="-DCMAKE_PREFIX_PATH=${TORCH_CMAKE_PATH}" && \
-    echo "CMAKE_ARGS set to: ${CMAKE_ARGS}" && \
+    export ROCM_PATH=/opt/rocm-current && \
+    export LD_LIBRARY_PATH=/opt/rocm-current/lib && \
+    export DEVICE_LIB_PATH=/opt/rocm-current/llvm/amdgcn/bitcode && \
+    export HIP_DEVICE_LIB_PATH=/opt/rocm-current/llvm/amdgcn/bitcode && \
+    export HIP_VISIBLE_DEVICES=-1 && \
+    export ROCR_VISIBLE_DEVICES=-1 && \
     uv pip uninstall amdsmi && \
     uv pip install "numpy<2" && \
     python use_existing_torch.py && \
@@ -105,16 +112,6 @@ RUN echo "Patching flash-attention for ROCm..." && \
     echo "Verifying patch applied:" && \
     head -3 flash_attn/__init__.py
 
+ENV FLASH_ATTENTION_TRITON_AMD_ENABLE="TRUE"
 RUN echo "Installing flash-attention with ROCm support..." && \
-    TORCH_CMAKE_PATH=$(python -c "import torch; print(torch.utils.cmake_prefix_path)" 2>&1 | tail -1) && \
-    export CMAKE_ARGS="-DCMAKE_PREFIX_PATH=${TORCH_CMAKE_PATH}" && \
-    echo "CMAKE_ARGS set to: ${CMAKE_ARGS}" && \
     python setup.py develop
-
-WORKDIR /opt/vllm-build/vllm
-
-RUN echo '#!/bin/bash\nsource /opt/vllm-build/.venv/bin/activate\nexec vllm "$@"' > /usr/local/bin/vllm-entrypoint && \
-    chmod +x /usr/local/bin/vllm-entrypoint
-
-ENTRYPOINT ["/usr/local/bin/vllm-entrypoint"]
-CMD ["serve", "--help"]
