Set CMAKE_PREFIX_PATH to PyTorch location for vLLM build
CMake needs to find PyTorch's TorchConfig.cmake for C++ extension builds

--- a/docker/vllm-rocm/Dockerfile
+++ b/docker/vllm-rocm/Dockerfile
@@ -85,6 +85,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
     export HIP_VISIBLE_DEVICES=-1 && \
     export ROCR_VISIBLE_DEVICES=-1 && \
     export VLLM_TARGET_DEVICE=rocm && \
+    export CMAKE_PREFIX_PATH=$(python -c "import torch; print(torch.utils.cmake_prefix_path)") && \
     uv pip uninstall amdsmi && \
     uv pip install "numpy<2" && \
     python use_existing_torch.py && \
