Add vLLM ROCm build patches for gfx1151 architecture support

--- a/docker/vllm-rocm/Dockerfile
+++ b/docker/vllm-rocm/Dockerfile
@@ -1,93 +1,36 @@
-# syntax=docker/dockerfile:1.4
-# https://community.frame.work/t/compiling-vllm-from-source-on-strix-halo/77241
-FROM fedora:43
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+FROM rocm/vllm-dev:base_custom_ROCm-7.1_base_image_20251031
 
-ARG ROCM_INDEX_URL=https://rocm.nightlies.amd.com/v2/gfx1151/
+ENV ROCM_HOME=/opt/rocm \
+    HIP_PATH=/opt/rocm \
+    ROCM_PATH=/opt/rocm \
+    HIP_DEVICE_LIB_PATH=/opt/rocm/amdgcn/bitcode \
+    PYTORCH_ROCM_ARCH=gfx1151
 
-WORKDIR /opt/vllm-build
-RUN uv venv --python 3.13
-ENV VIRTUAL_ENV=/opt/vllm-build/.venv
-ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+WORKDIR /workspace
 
-RUN dnf install -y \
-    wget \
-    curl \
-    git \
-    gcc \
-    gcc-c++ \
-    make \
-    cmake \
-    python3-pip \
-    python3-devel \
-    openssl-devel \
-    libffi-devel \
-    ca-certificates \
-    tar \
-    gzip \
-    libatomic \
-    && dnf clean all
+RUN git clone https://github.com/vllm-project/vllm.git && \
+    cd vllm
 
-RUN --mount=type=cache,target=/root/.cache/uv \
-    uv pip install --index-url ${ROCM_INDEX_URL} "rocm[libraries,devel]" && \
-    uv pip install --index-url ${ROCM_INDEX_URL} --pre torch torchaudio torchvision
+WORKDIR /workspace/vllm
 
-RUN --mount=type=cache,target=/var/cache/rocm-downloads \
-    ROCM_VERSION=$(uv pip show torch | grep Version | awk -F'+rocm' '{print $2}') && \
-    echo "Detected ROCm Version: $ROCM_VERSION" && \
-    TARBALL="therock-dist-linux-gfx1151-${ROCM_VERSION}.tar.gz" && \
-    if [ -f "/var/cache/rocm-downloads/${TARBALL}" ]; then \
-        echo "Using cached ROCm tarball" && \
-        ln -s "/var/cache/rocm-downloads/${TARBALL}" . ; \
-    else \
-        echo "Downloading ROCm tarball" && \
-        curl -#LO "https://therock-nightly-tarball.s3.amazonaws.com/${TARBALL}" && \
-        cp "${TARBALL}" "/var/cache/rocm-downloads/${TARBALL}" ; \
-    fi && \
-    echo "Extracting ROCm from ${TARBALL}" && \
-    mkdir -p rocm-${ROCM_VERSION} && \
-    tar xzf ${TARBALL} -C rocm-${ROCM_VERSION} && \
-    rm ${TARBALL} && \
-    echo "${ROCM_VERSION}" > /opt/rocm_version.txt && \
-    ln -s /opt/vllm-build/rocm-${ROCM_VERSION} /opt/rocm-current
+COPY patches/amdsmi.patch .
+COPY patches/get_hip_flags.py cmake/
+COPY patches/utils.cmake.patch .
 
-ENV ROCM_PATH=/opt/rocm-current
-ENV LD_LIBRARY_PATH=$ROCM_PATH/lib
-ENV DEVICE_LIB_PATH=$ROCM_PATH/llvm/amdgcn/bitcode
-ENV HIP_DEVICE_LIB_PATH=$ROCM_PATH/llvm/amdgcn/bitcode
-ENV PYTORCH_ROCM_ARCH="gfx1151"
-ENV FLASH_ATTENTION_TRITON_AMD_ENABLE="TRUE"
+RUN patch -p1 < amdsmi.patch && \
+    patch -p1 < utils.cmake.patch
 
-RUN --mount=type=cache,target=/root/.cache/git \
-    echo "Cloning vllm repository..." && \
-    git clone https://github.com/vllm-project/vllm.git
+RUN python3 use_existing_torch.py
 
-WORKDIR /opt/vllm-build/vllm
+RUN pip install -r requirements-rocm.txt
 
-RUN sed -i '/from \.version import __version__/a import amdsmi' vllm/__init__.py
+ENV VLLM_TARGET_DEVICE=rocm \
+    VLLM_GPU_ARCHES=gfx1151
 
-RUN --mount=type=cache,target=/root/.cache/uv \
-    export VLLM_TARGET_DEVICE=rocm && \
-    export CMAKE_PREFIX_PATH=$(python -c "import torch; print(torch.utils.cmake_prefix_path)") && \
-    uv pip uninstall amdsmi && \
-    uv pip install "numpy<2" && \
-    python use_existing_torch.py && \
-    uv pip install --upgrade numba scipy huggingface-hub[cli,hf_transfer] setuptools_scm && \
-    uv pip install -r requirements/rocm.txt && \
-    python setup.py develop && \
-    uv pip install ${ROCM_PATH}/share/amd_smi
+RUN python3 setup.py build_ext --inplace
 
-RUN --mount=type=cache,target=/root/.cache/git \
-    echo "Cloning flash-attention repository..." && \
-    cd /opt/vllm-build && \
-    git clone https://github.com/ROCm/flash-attention.git && \
-    cd flash-attention && \
-    git checkout main_perf
+RUN pip install -e .
 
-WORKDIR /opt/vllm-build/flash-attention
+WORKDIR /workspace
 
-RUN echo "Patching flash-attention for ROCm..." && \
-    sed -i '/from wheel.bdist_wheel import bdist_wheel/a import amdsmi' setup.py && \
-    sed -i '1i import amdsmi' flash_attn/__init__.py
-
-RUN python setup.py develop
+CMD ["vllm", "serve", "--help"]
