--- a/programs/monitoring/Pulumi.pantheon.yaml
+++ b/programs/monitoring/Pulumi.pantheon.yaml
@@ -28,24 +28,51 @@ config:
   monitoring:integrations:
     grafana:
       - name: grafana
-        namespace: monitoring
+        namespaces:
+          - monitoring
         labelSelectors:
           app.kubernetes.io/name: grafana
     loki:
       - name: loki
-        namespace: monitoring
+        namespaces:
+          - monitoring
         labelSelectors:
           app.kubernetes.io/name: loki
     alloy:
       - name: alloy
-        namespace: monitoring
+        namespaces:
+          - monitoring
+          - collectors
         labelSelectors:
-          app.kubernetes.io/name: alloy
+          app.kubernetes.io/name:
+            [
+              alloy-singleton,
+              alloy-metrics,
+              alloy-logs,
+              alloy-profiles,
+              alloy-receiver,
+              alloy,
+            ]
     mimir:
       - name: mimir
-        namespace: monitoring
+        namespaces:
+          - monitoring
         labelSelectors:
           app.kubernetes.io/name: mimir
+  monitoring:alloyMetricsResources:
+    requests:
+      memory: 512Mi
+      cpu: 100m
+    limits:
+      memory: 2Gi
+      cpu: 1000m
+  monitoring:alloyLogsResources:
+    requests:
+      memory: 256Mi
+      cpu: 100m
+    limits:
+      memory: 1Gi
+      cpu: 500m
   monitoring:nvidiaDcgm:
     enabled: true
     nodeSelector:
