default gateways and reverse proxy for home assitant

--- a/programs/ingress/Pulumi.pantheon.yaml
+++ b/programs/ingress/Pulumi.pantheon.yaml
@@ -34,6 +34,13 @@ config:
         enabled: true
       inferenceExtension:
         enabled: true
+    defaultGateway:
+      enabled: true
+      name: "default-gateway"
+      hostnames: ["*.holdenitdown.net", "*.pantheon.holdenitdown.net"]
+      certificate:
+        name: "default-certificate"
+        secretName: "default-tls-secret"
   # IP Address Pools
   ingress:ipAddressPools:
     - name: "default-pool"
@@ -50,7 +57,8 @@ config:
   # DNS Providers
   ingress:dnsProviders:
     - provider: "cloudflare"
-      domainFilters: ["rholden.dev", "*.rholden.dev", "rholden.me", "*.rholden.me"]
+      domainFilters:
+        ["rholden.dev", "*.rholden.dev", "rholden.me", "*.rholden.me"]
     - provider: "adguard"
       domainFilters: ["holdenitdown.net", "*.holdenitdown.net"]
       adguard:
@@ -76,7 +84,16 @@ config:
   ingress:defaultCertificate:
     name: "default-certificate"
     secretName: "default-tls-secret"
-    dnsNames: ["*.rholden.dev", "rholden.dev", "*.rholden.me", "rholden.me", "*.holdenitdown.net", "holdenitdown.net"]
+    dnsNames:
+      [
+        "*.rholden.dev",
+        "rholden.dev",
+        "*.rholden.me",
+        "rholden.me",
+        "*.holdenitdown.net",
+        "holdenitdown.net",
+        "*.pantheon.holdenitdown.net",
+      ]
     issuerRef: "letsencrypt-prod"
   # Whoami Configuration
   ingress:whoami:
