--- a/programs/storage/Pulumi.romulus.yaml
+++ b/programs/storage/Pulumi.romulus.yaml
@@ -3,7 +3,7 @@ config:
   kubernetes:clusterIdentifier: romulus
   kubernetes:context: romulus
   storage:cluster-name: romulus
-  
+
   # Ceph Cluster Configuration
   storage:ceph-cluster:
     clusterName: "storage-cluster"
@@ -16,13 +16,15 @@ config:
         - name: "sol"
           devices:
             - name: "/dev/nvme0n1p3"
-        - name: "luna" 
+        - name: "luna"
           devices:
             - name: "/dev/nvme0n1p3"
         - name: "aurora"
           devices:
             - name: "/dev/nvme0n1p3"
-  
+        - name: "terra"
+          devices:
+            - name: "/dev/nvme0n1p3"
   # Storage Class Configurations
   storage:storage-classes:
     - name: "shared-fs"
@@ -54,7 +56,7 @@ config:
             limits:
               cpu: "1000m"
               memory: "2Gi"
-  
+
   # Ingress Configuration
   storage:ingress:
     enabled: true
@@ -64,8 +66,7 @@ config:
       cert-manager.io/cluster-issuer: "letsencrypt-prod"
     tls:
       enabled: true
-  
+
   # Toolbox Configuration
   storage:toolbox:
     enabled: true
-
