--- a/programs/monitoring/Pulumi.pantheon.yaml
+++ b/programs/monitoring/Pulumi.pantheon.yaml
@@ -86,8 +86,8 @@ config:
     collectionInterval: 30000
     resources:
       requests:
-        memory: 256Mi
+        memory: 512Mi
         cpu: 100m
       limits:
-        memory: 512Mi
+        memory: 1Gi
         cpu: 500m
