--- a/.gitea/workflows/build-firecrawl-nuq-postgres.yml
+++ b/.gitea/workflows/build-firecrawl-nuq-postgres.yml
@@ -1,4 +1,4 @@
-name: Build Firecrawl Playwright Service
+name: Build Firecrawl Nuq Postgres
 
 on:
   workflow_dispatch:
@@ -35,11 +35,11 @@ jobs:
       - name: Build and push ${{ matrix.arch }} image
         uses: https://github.com/docker/build-push-action@v5
         with:
-          context: ./firecrawl/apps/playwright-service-ts
-          file: ./firecrawl/apps/playwright-service-ts/Dockerfile
+          context: ./firecrawl/apps/nuq-postgres
+          file: ./firecrawl/apps/nuq-postgres/Dockerfile
           platforms: linux/${{ matrix.arch }}
           push: true
-          tags: git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl-playwright:${{ inputs.firecrawl_version }}-${{ matrix.arch }}
+          tags: git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl-nuq-postgres:${{ inputs.firecrawl_version }}-${{ matrix.arch }}
 
   create-manifest:
     needs: build
@@ -55,6 +55,6 @@ jobs:
 
       - name: Create and push manifest
         run: |
-          docker buildx imagetools create -t git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl-playwright:${{ inputs.firecrawl_version }} \
-            git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl-playwright:${{ inputs.firecrawl_version }}-arm64 \
-            git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl-playwright:${{ inputs.firecrawl_version }}-amd64
+          docker buildx imagetools create -t git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl-nuq-postgres:${{ inputs.firecrawl_version }} \
+            git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl-nuq-postgres:${{ inputs.firecrawl_version }}-arm64 \
+            git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl-nuq-postgres:${{ inputs.firecrawl_version }}-amd64
