--- a/programs/grafana/alerts/kubernetes.yaml
+++ b/programs/grafana/alerts/kubernetes.yaml
@@ -260,72 +260,72 @@
           "severity": "warning"
   - "name": "kubernetes-resources"
     "rules":
-      - "alert": "KubeCPUOvercommit"
-        "annotations":
-          "description": 'Cluster {{ $labels.cluster }} has overcommitted CPU resource requests for Pods by {{ printf "%.2f" $value }} CPU shares and cannot tolerate node failure.'
-          "runbook_url": "https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubecpuovercommit"
-          "summary": "Cluster has overcommitted CPU resource requests."
-        "expr": |
-          # Non-HA clusters.
-          (
-            (
-              sum(namespace_cpu:kube_pod_container_resource_requests:sum{}) by (cluster)
-              -
-              sum(kube_node_status_allocatable{resource="cpu", job="integrations/kubernetes/kube-state-metrics"}) by (cluster) > 0
-            )
-            and
-            count(max by (node, cluster) (kube_node_role{job="integrations/kubernetes/kube-state-metrics", role="control-plane"})) by (cluster) < 3
-          )
-          or
-          # HA clusters.
-          (
-            sum(namespace_cpu:kube_pod_container_resource_requests:sum{}) by (cluster)
-            -
-            (
-              # Skip clusters with only one allocatable node.
-              (
-                sum(kube_node_status_allocatable{resource="cpu", job="integrations/kubernetes/kube-state-metrics"}) by (cluster)
-                -
-                max(kube_node_status_allocatable{resource="cpu", job="integrations/kubernetes/kube-state-metrics"}) by (cluster)
-              ) > 0
-            ) > 0
-          )
-        "for": "10m"
-        "labels":
-          "severity": "warning"
-      - "alert": "KubeMemoryOvercommit"
-        "annotations":
-          "description": "Cluster {{ $labels.cluster }} has overcommitted memory resource requests for Pods by {{ $value | humanize }} bytes and cannot tolerate node failure."
-          "runbook_url": "https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubememoryovercommit"
-          "summary": "Cluster has overcommitted memory resource requests."
-        "expr": |
-          # Non-HA clusters.
-          (
-            (
-              sum(namespace_memory:kube_pod_container_resource_requests:sum{}) by (cluster)
-              -
-              sum(kube_node_status_allocatable{resource="memory", job="integrations/kubernetes/kube-state-metrics"}) by (cluster) > 0
-            )
-            and
-            count(max by (node, cluster) (kube_node_role{job="integrations/kubernetes/kube-state-metrics", role="control-plane"})) by (cluster) < 3
-          )
-          or
-          # HA clusters.
-          (
-            sum(namespace_memory:kube_pod_container_resource_requests:sum{}) by (cluster)
-            -
-            (
-              # Skip clusters with only one allocatable node.
-              (
-                sum(kube_node_status_allocatable{resource="memory", job="integrations/kubernetes/kube-state-metrics"}) by (cluster)
-                -
-                max(kube_node_status_allocatable{resource="memory", job="integrations/kubernetes/kube-state-metrics"}) by (cluster)
-              ) > 0
-            ) > 0
-          )
-        "for": "10m"
-        "labels":
-          "severity": "warning"
+      # - "alert": "KubeCPUOvercommit"
+      #   "annotations":
+      #     "description": 'Cluster {{ $labels.cluster }} has overcommitted CPU resource requests for Pods by {{ printf "%.2f" $value }} CPU shares and cannot tolerate node failure.'
+      #     "runbook_url": "https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubecpuovercommit"
+      #     "summary": "Cluster has overcommitted CPU resource requests."
+      #   "expr": |
+      #     # Non-HA clusters.
+      #     (
+      #       (
+      #         sum(namespace_cpu:kube_pod_container_resource_requests:sum{}) by (cluster)
+      #         -
+      #         sum(kube_node_status_allocatable{resource="cpu", job="integrations/kubernetes/kube-state-metrics"}) by (cluster) > 0
+      #       )
+      #       and
+      #       count(max by (node, cluster) (kube_node_role{job="integrations/kubernetes/kube-state-metrics", role="control-plane"})) by (cluster) < 3
+      #     )
+      #     or
+      #     # HA clusters.
+      #     (
+      #       sum(namespace_cpu:kube_pod_container_resource_requests:sum{}) by (cluster)
+      #       -
+      #       (
+      #         # Skip clusters with only one allocatable node.
+      #         (
+      #           sum(kube_node_status_allocatable{resource="cpu", job="integrations/kubernetes/kube-state-metrics"}) by (cluster)
+      #           -
+      #           max(kube_node_status_allocatable{resource="cpu", job="integrations/kubernetes/kube-state-metrics"}) by (cluster)
+      #         ) > 0
+      #       ) > 0
+      #     )
+      #   "for": "10m"
+      #   "labels":
+      #     "severity": "warning"
+      # - "alert": "KubeMemoryOvercommit"
+      #   "annotations":
+      #     "description": "Cluster {{ $labels.cluster }} has overcommitted memory resource requests for Pods by {{ $value | humanize }} bytes and cannot tolerate node failure."
+      #     "runbook_url": "https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubememoryovercommit"
+      #     "summary": "Cluster has overcommitted memory resource requests."
+      #   "expr": |
+      #     # Non-HA clusters.
+      #     (
+      #       (
+      #         sum(namespace_memory:kube_pod_container_resource_requests:sum{}) by (cluster)
+      #         -
+      #         sum(kube_node_status_allocatable{resource="memory", job="integrations/kubernetes/kube-state-metrics"}) by (cluster) > 0
+      #       )
+      #       and
+      #       count(max by (node, cluster) (kube_node_role{job="integrations/kubernetes/kube-state-metrics", role="control-plane"})) by (cluster) < 3
+      #     )
+      #     or
+      #     # HA clusters.
+      #     (
+      #       sum(namespace_memory:kube_pod_container_resource_requests:sum{}) by (cluster)
+      #       -
+      #       (
+      #         # Skip clusters with only one allocatable node.
+      #         (
+      #           sum(kube_node_status_allocatable{resource="memory", job="integrations/kubernetes/kube-state-metrics"}) by (cluster)
+      #           -
+      #           max(kube_node_status_allocatable{resource="memory", job="integrations/kubernetes/kube-state-metrics"}) by (cluster)
+      #         ) > 0
+      #       ) > 0
+      #     )
+      #   "for": "10m"
+      #   "labels":
+      #     "severity": "warning"
       - "alert": "KubeCPUQuotaOvercommit"
         "annotations":
           "description": "Cluster has overcommitted CPU resource requests for Namespaces."
